--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-formio",
-  "version": "4.0.0-rc.18",
+  "version": "4.0.0-rc.18mc1",
   "description": "React renderer for form.io forms.",
   "main": "lib/index.js",
   "scripts": {
