--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-formio",
-  "version": "4.0.0-rc.18mc2",
+  "version": "4.0.0-rc.18mc3",
   "description": "React renderer for form.io forms.",
   "main": "lib/index.js",
   "scripts": {
@@ -30,7 +30,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.1.4",
-    "formiojs": "^4.0.0-rc.31",
+    "formiojs": "4.0.1-mc1",
     "eventemitter2": "^5.0.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
