--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-formio",
-  "version": "4.2.3",
+  "version": "4.2.3-mc1",
   "description": "React renderer for form.io forms.",
   "main": "lib/index.js",
   "scripts": {
@@ -32,7 +32,7 @@
     "babel-polyfill": "^6.26.0",
     "core-js": "^3.1.4",
     "eventemitter2": "^5.0.1",
-    "formiojs": "^4.7.1",
+    "formiojs": "4.7.2-mc1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "recompose": "^0.30.0"
